# auto-vqe

./: .coverage  .gitignore  AUTO_VQE_REVOLUTION.md  Justfile  Plan.md  README.md  ansatz.py  environment.py  main.py  program.md  pyproject.toml
baselines/: __init__.py  adapt.py  givens.py  hea.py  hva.py  kupccgsd.py  qubit_adapt.py  qucc.py  uccsd.py
core/: adapt_vqe.py  base_env.py  circuit_drawer.py  circuit_factory.py  controller.py  engine.py  parameter_mapper.py  parameter_mapping.py  research_driver.py  research_session.py  schemas.py  scipy_optimizer.py  search_algorithms.py  strategy_base.py
doc/: 100q_hva_strategy.md  AUTO_VQE_REVOLUTION.md  agent_architecture.md  agent_autoresearch_schema.md  agent_runtime_guide.md  beyond_template_search.md  config_schema.md  evaluation_protocol.md  experiment_artifact_protocol.md  lih_repo_flow.md  logging_spec.md  molecular_hamiltonian_guide.md  orchestration_protocol.md  parameter_mapping.md  pi_autoresearch_integration_plan.md  project_intro_10min.md  report_regeneration_guide.md  tfim_100q_hva_strategy.md
experiments/: README.md  shared.py
tests/: benchmark_mapping.py  test_adapt_integration.py  test_adapt_strategy.py  test_audit.py  test_baseline_uccsd.py  test_circuit_drawer.py  test_circuit_factory_blocks.py  test_engine_report.py  test_engine_report_fast.py  test_ga_search_algorithms.py  test_grid_search_algorithms.py  test_lih_env.py  test_molecular.py  test_mps_integration.py  test_multifidelity_engine.py  test_new_baselines.py  test_orchestration.py  test_orchestrator_promotion.py  test_parameter_mapper.py  (+11 more)
(+133 files in other folders)
