[project]
name = "2026-03-10-auto-vqe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "tensorcircuit>=0.12.0,<0.16.0",
    "torch>=2.1.0,<3.0.0",
    "numpy>=1.24,<2.0.0",
    "matplotlib>=3.7,<4.0",
    "qiskit>=1.0.0,<2.0.0",
    "qiskit-aer>=0.17.2",
    "qiskit-ibm-runtime>=0.44.1",
    "pylatexenc>=2.10",
    "pyscf>=2.12.1",
    "openfermion>=1.7.1",
    "openfermionpyscf>=0.5",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::SyntaxWarning",
    "ignore::DeprecationWarning:qiskit.*",
    "ignore::RuntimeWarning:numpy.linalg.*",
]
